--- a/wp-content/uploads/elementor/css/post-16824.css?ver=1740565034.css
+++ b/wp-content/uploads/elementor/css/post-16824.css?ver=1740565034.css
@@ -1,1 +1,188 @@
-.elementor-16824 .elementor-element.elementor-element-d3fe575:not(.elementor-motion-effects-element-type-background), .elementor-16824 .elementor-element.elementor-element-d3fe575 > .elementor-motion-effects-container > .elementor-motion-effects-layer{background-color:#000000;}.elementor-16824 .elementor-element.elementor-element-d3fe575{transition:background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;padding:20px 35px 20px 35px;}.elementor-16824 .elementor-element.elementor-element-d3fe575 > .elementor-background-overlay{transition:background 0.3s, border-radius 0.3s, opacity 0.3s;}.elementor-bc-flex-widget .elementor-16824 .elementor-element.elementor-element-edf04a4.elementor-column .elementor-widget-wrap{align-items:center;}.elementor-16824 .elementor-element.elementor-element-edf04a4.elementor-column.elementor-element[data-element_type="column"] > .elementor-widget-wrap.elementor-element-populated{align-content:center;align-items:center;}.elementor-16824 .elementor-element.elementor-element-edf04a4 > .elementor-element-populated{padding:0px 0px 0px 15px;}.elementor-16824 .elementor-element.elementor-element-2d30f82{width:auto;max-width:auto;}.elementor-16824 .elementor-element.elementor-element-2d30f82 > .elementor-widget-container{margin:0px 49px 0px 0px;}.elementor-16824 .elementor-element.elementor-element-2d30f82 .pxl-menu-hidden-sidebar .pxl-menu-button .pxl-anchor--title{color:#FFFFFF;}.elementor-16824 .elementor-element.elementor-element-2d30f82 .pxl-menu-hidden-sidebar .pxl-menu-button{width:74px;height:74px;border-style:solid !important;border-color:#FFFFFF26 !important;}.elementor-16824 .elementor-element.elementor-element-f51cc86{width:auto;max-width:auto;}.elementor-16824 .elementor-element.elementor-element-f51cc86 .pxl-logo img{max-height:44px;}.elementor-bc-flex-widget .elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column .elementor-widget-wrap{align-items:center;}.elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column.elementor-element[data-element_type="column"] > .elementor-widget-wrap.elementor-element-populated{align-content:center;align-items:center;}.elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column > .elementor-widget-wrap{justify-content:flex-end;}.elementor-16824 .elementor-element.elementor-element-8ddf7ca > .elementor-element-populated{padding:0px 15px 0px 0px;}.elementor-16824 .elementor-element.elementor-element-fce47d0{width:auto;max-width:auto;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:not(:hover){color:#FFFFFF;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover{color:#FFFFFF;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a{font-size:15px;font-weight:400;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link.type-horizontal li{margin-right:22px;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover i{color:#111111 !important;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a i,.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a svg{background-color:#FFFFFF1A;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover i,.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover svg{background-color:#FFFFFF;}.elementor-16824 .elementor-element.elementor-element-a34b23a{width:auto;max-width:auto;}.elementor-16824 .elementor-element.elementor-element-a34b23a > .elementor-widget-container{margin:0px 0px 0px 61px;}.elementor-16824 .elementor-element.elementor-element-a34b23a .pxl-language-switch .language-first{color:#FFFFFF;}.elementor-16824 .elementor-element.elementor-element-a34b23a .pxl-language-switch{background-color:#FFFFFF00;border-style:solid !important;border-width:1px 1px 1px 1px !important;border-color:#FFFFFF26 !important;}.elementor-16824 .elementor-element.elementor-element-23136ef{width:auto;max-width:auto;}.elementor-16824 .elementor-element.elementor-element-23136ef > .elementor-widget-container{margin:0px 0px 0px 16px;}.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button i{color:#FFFFFF !important;}.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button svg{fill:#FFFFFF !important;}.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button {border-color:#FFFFFF26 !important;}.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button.style-box{background-color:#FFFFFF00;border-radius:50px 50px 50px 50px;}.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button.style-box-bd{background-color:#FFFFFF00;border-radius:50px 50px 50px 50px;}@media(min-width:768px){.elementor-16824 .elementor-element.elementor-element-edf04a4{width:27.648%;}.elementor-16824 .elementor-element.elementor-element-8ddf7ca{width:72.352%;}}@media(max-width:1366px){.elementor-16824 .elementor-element.elementor-element-d3fe575{padding:30px 0px 39px 0px;}.elementor-16824 .elementor-element.elementor-element-2d30f82 > .elementor-widget-container{margin:0px 22px 0px 0px;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a{font-size:13px;}.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link.type-horizontal li{margin-right:15px;}.elementor-16824 .elementor-element.elementor-element-a34b23a > .elementor-widget-container{margin:0px 0px 0px 20px;}}
+.elementor-16824 .elementor-element.elementor-element-d3fe575:not(.elementor-motion-effects-element-type-background), .elementor-16824 .elementor-element.elementor-element-d3fe575 > .elementor-motion-effects-container > .elementor-motion-effects-layer {
+    background-color: #000000;
+}
+
+.elementor-16824 .elementor-element.elementor-element-d3fe575 {
+    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+    padding: 20px 35px 20px 35px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-d3fe575 > .elementor-background-overlay {
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+}
+
+.elementor-bc-flex-widget .elementor-16824 .elementor-element.elementor-element-edf04a4.elementor-column .elementor-widget-wrap {
+    align-items: center;
+}
+
+.elementor-16824 .elementor-element.elementor-element-edf04a4.elementor-column.elementor-element[data-element_type="column"] > .elementor-widget-wrap.elementor-element-populated {
+    align-content: center;
+    align-items: center;
+}
+
+.elementor-16824 .elementor-element.elementor-element-edf04a4 > .elementor-element-populated {
+    padding: 0px 0px 0px 15px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-2d30f82 {
+    width: auto;
+    max-width: auto;
+}
+
+.elementor-16824 .elementor-element.elementor-element-2d30f82 > .elementor-widget-container {
+    margin: 0px 49px 0px 0px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-2d30f82 .pxl-menu-hidden-sidebar .pxl-menu-button .pxl-anchor--title {
+    color: #FFFFFF;
+}
+
+.elementor-16824 .elementor-element.elementor-element-2d30f82 .pxl-menu-hidden-sidebar .pxl-menu-button {
+    width: 74px;
+    height: 74px;
+    border-style: solid !important;
+    border-color: #FFFFFF26 !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-f51cc86 {
+    width: auto;
+    max-width: auto;
+}
+
+.elementor-16824 .elementor-element.elementor-element-f51cc86 .pxl-logo img {
+    max-height: 44px;
+}
+
+.elementor-bc-flex-widget .elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column .elementor-widget-wrap {
+    align-items: center;
+}
+
+.elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column.elementor-element[data-element_type="column"] > .elementor-widget-wrap.elementor-element-populated {
+    align-content: center;
+    align-items: center;
+}
+
+.elementor-16824 .elementor-element.elementor-element-8ddf7ca.elementor-column > .elementor-widget-wrap {
+    justify-content: flex-end;
+}
+
+.elementor-16824 .elementor-element.elementor-element-8ddf7ca > .elementor-element-populated {
+    padding: 0px 15px 0px 0px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 {
+    width: auto;
+    max-width: auto;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:not(:hover) {
+    color: #FFFFFF;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover {
+    color: #FFFFFF;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a {
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link.type-horizontal li {
+    margin-right: 22px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover i {
+    color: #111111 !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a i, .elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a svg {
+    background-color: #FFFFFF1A;
+}
+
+.elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover i, .elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a:hover svg {
+    background-color: #FFFFFF;
+}
+
+.elementor-16824 .elementor-element.elementor-element-a34b23a {
+    width: auto;
+    max-width: auto;
+}
+
+.elementor-16824 .elementor-element.elementor-element-a34b23a > .elementor-widget-container {
+    margin: 0px 0px 0px 61px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-a34b23a .pxl-language-switch .language-first {
+    color: #FFFFFF;
+}
+
+.elementor-16824 .elementor-element.elementor-element-a34b23a .pxl-language-switch {
+    background-color: #FFFFFF00;
+    border-style: solid !important;
+    border-width: 1px 1px 1px 1px !important;
+    border-color: #FFFFFF26 !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef {
+    width: auto;
+    max-width: auto;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef > .elementor-widget-container {
+    margin: 0px 0px 0px 16px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button i {
+    color: #FFFFFF !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button svg {
+    fill: #FFFFFF !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button {
+    border-color: #FFFFFF26 !important;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button.style-box {
+    background-color: #FFFFFF00;
+    border-radius: 50px 50px 50px 50px;
+}
+
+.elementor-16824 .elementor-element.elementor-element-23136ef .pxl-search-popup-button.style-box-bd {
+    background-color: #FFFFFF00;
+    border-radius: 50px 50px 50px 50px;
+}
+
+@media (min-width: 768px) {
+    .elementor-16824 .elementor-element.elementor-element-edf04a4 {
+        width: 27.648%;
+    }
+
+    .elementor-16824 .elementor-element.elementor-element-8ddf7ca {
+        width: 72.352%;
+    }
+}
+
+@media (max-width: 1366px) {
+    .elementor-16824 .elementor-element.elementor-element-d3fe575 {
+        padding: 30px 0px 39px 0px;
+    }
+
+    .elementor-16824 .elementor-element.elementor-element-2d30f82 > .elementor-widget-container {
+        margin: 0px 22px 0px 0px;
+    }
+
+    .elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link a {
+        font-size: 13px;
+    }
+
+    .elementor-16824 .elementor-element.elementor-element-fce47d0 .pxl-link.type-horizontal li {
+        margin-right: 15px;
+    }
+
+    .elementor-16824 .elementor-element.elementor-element-a34b23a > .elementor-widget-container {
+        margin: 0px 0px 0px 20px;
+    }
+}
